会话上下文块：<tools> 与 <provider> 退场，<env> 进来
复议一次已落地的机制（`.scratch/system-prompt-blocks/`），**只动内建行的集合**：`SystemPrompt`
点、三个来源、装载/卸载、每 run 现算、原样进 prompt、退出 2 拒绝这次 run——一条没改。
四张票（`.scratch/session-context/`）全部落地。

- 内建的行三条变两条：`<project>` 留下，`<tools>` 与 `<provider>` 退场（名册在 wire 的
  `:tools` 数组里自描述，说第二遍是把同一件事说两遍；`<provider>` 是净损失，如实记在 spec 里）
- 新增 `<env>`（`harness.infra.env` + `builtin:env`）：平台、命令实际交给哪个 shell（kind +
  路径 + 起法）、声明名单里这个 shell 看得见哪些命令行增强工具——**有说，没有也说**
- `harness.infra.shell` 从「找 Git Bash，否则 `bash`」变成一条**写明的候选链**
  （Git Bash → bash → pwsh → PowerShell → cmd）+ 每种 shell 自己的起法；Windows 上那个 `bash`
  是 WSL 启动器时**拒绝**并走下一级；没有可用的 shell 时如实说「没有」
- `infra.rg` 与 `cap.git` 要 POSIX shell：链的答案是别的就**指名失败**，不按另一套引号规则跑
- 机器的事实每进程解析一次并缓存（`shell/resolve*` / `env/probe*` 各有一个可注入的读法与显式
  重置），块本身仍每 run 现算；探测走同一个 shell，不是 `System.getenv`
- 文档：hooks / overview / kernel / README / layers / client 跟上；`architecture.md` 的「在办」
  拿掉这一条，模块地图多一行 `infra.env`

全量：`clojure -M:test -m harness.test-runner` → `Ran 824 tests containing 11135 assertions.
0 failures, 0 errors.`（基线 810 / 11065、2 errors）。

**随这份提交一起进来的还有工作树里别人的在办改动**（`session/closed-off` 重建收口、
stream 的终态、`log/warn!`、`with-temp-env` 那一批），它们与本特征无关；改到了同一批文件
（`http_test` / `test_support` / `test_runner` / `docs/architecture.md`），与本次的改动拆不开。
**合并后的这个状态是绿的**（上面那三个数），所以照实一起提交，而不是把一个半截的树留在分支上。